--- a/tutecode/week4/package.json
+++ b/tutecode/week4/package.json
@@ -7,7 +7,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^6.1.0",
+    "eslint-plugin-react": "^7.14.3"
+  },
   "scripts": {
     "start": "node ./server/src/server.js"
   },
